<resources>
    <string name="app_name">SmartPlay</string>
    <string name="username">用户名</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">actionbar</string>
    <string name="app_not_available">app isn\'t available</string>
    <string name="mycollection">收藏列表</string>
    <string name="item_imageView_contentDescription">Item Image</string>
    <string name="localfiles">本地歌曲</string>
    <string name="eastfantasy">东方幻想</string>
    <string name="animationCollection">动漫收藏</string>
    <string name="testName">深海少女</string>
    <string name="testArtist">MIKU</string>
    <string name="testDuration">300</string>
    <string name="menu_addToList">添加至列表</string>
    <string name="menu_deleteSelected">删除选中项</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="showPassword">显示密码</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="register">注册</string>
    <string name="menu_addList">添加列表</string>
    <string name="menu_delList">删除列表</string>
    <string name="menu_scanHome">扫描本地文件</string>
    <string name="user_info">用户资料</string>
    <string name="edit_user_info">编辑</string>
    <string name="birthday">生日</string>
    <string name="address">所在地</string>
    <string name="email">E-mail</string>
    <string name="qq">QQ</string>
    <string name="telephone">手机号</string>
    <string name="my_message">my message</string>
    <string name="it_is_night">night</string>
    <string name="account_info">account info</string>
    <string name="music">歌曲:</string>
    <string name="playnext">下一首播放</string>
    <string name="collectToCollection">收藏至歌单</string>
    <string name="download">下载</string>
    <string name="comments">评论</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="singer">歌手</string>
    <string name="album">专辑</string>
    <string name="my_music_list">我的歌单</string>
    <string name="newList">新建歌单</string>
    <string name="listname">歌单名称</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="select_picture_from_photolib">从图库中选择背景</string>
    <string name="pause">暂停</string>

    <string name="music_filter_music">歌曲</string>
    <string name="music_filter_singer">歌手</string>
    <string name="music_filter_album">专辑</string>
    <string name="music_filter_folder">文件夹</string>
    <string name="album_create">创建</string>

</resources>
