<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/id_top_home_linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:background="@color/colorGreenHost"
            android:baselineAligned="false"
            android:alpha="1">

            <TextView
                android:id="@+id/tv_local_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/localfiles"
                android:textSize="24dp"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/tv_music_count1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_local_music"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:textColor="#FFFFFF"
                />

        </RelativeLayout>


    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <View android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/colorGreenHost"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_music_list"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"/>
        <View android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorCyan100"/>
        <TextView
            android:id="@+id/tv_addlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/newList"
            android:textColor="@color/colorGreenHost"
            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_music_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />
</LinearLayout>