<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/personinfoback"
            android:elevation="2dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/toolbar_userInfo">

                <ImageView
                    android:id="@+id/iv_userInfo_return"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_chevron_left_white_48" />

                <TextView
                    android:id="@+id/tv_personInfo_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:layout_marginRight="8dp"
                    android:text="@string/edit_user_info"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:id="@+id/iv_setAvatar"
                android:layout_centerInParent="true"
                android:layout_below="@id/toolbar_userInfo"
                app:border_color="@color/colorBlue100"
                app:border_width="2dp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relativeLayout1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/userName" />

                    <TextView
                        android:id="@+id/tv_personInfo_nickName"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/userName"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/tv_personInfo_gender"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/gender"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/age" />

                    <TextView
                        android:id="@+id/tv_personInfo_age"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/age"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/birthday" />

                    <TextView
                        android:id="@+id/tv_personInfo_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/birthday"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/address" />

                    <TextView
                        android:id="@+id/tv_personInfo_address"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/address"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/tv_personInfo_email"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/qq" />

                    <TextView
                        android:id="@+id/tv_personInfo_QQ"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/qq"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/telephone" />

                    <TextView
                        android:id="@+id/tv_personInfo_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:hint="@string/telephone"
                        android:textColorHint="@color/colorIndego"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorIndego" />
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>
</LinearLayout>